# scanned-pdf-manuals-converter

./: .gitignore  README.md  Spare parts template last version.xlsx  app.py  benefit_tools.py  pyproject.toml  requirements.txt  tools.py  vessels.csv
.devcontainer/: devcontainer.json
